<resources>
    <string name="app_name">BasicWidget</string>
    <string name="btn1_text">라디오버튼</string>
    <string name="btn2_text">Width 라디오버튼</string>
    <string name="btn3_text">height 버튼</string>
    <string name="btn4_text">Color 버튼</string>
    <string name="btn5_text">Margin 버튼</string>
    <string name="btn6_text">Padding 버튼</string>
    <string name="btn7_text">Visible 버튼</string>
</resources>
